# gtb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gtb.nsight-gfxproj  gtb.sln  gtb.vcxproj  gtb.vcxproj.filters  llvm-toolchain.cmake
content/: Cube.gltf  Cube_BaseColor.dds  Cube_MetallicRoughness.dds
gtb/: CMakeLists.txt  application.cpp  application.hpp  dbg_out.hpp  exception.cpp  exception.hpp  flowers1.dds  flowers2.dds  glfw_dispatch_loader.hpp  graphics.cpp  graphics.hpp  gtb.cpp  main.cpp  pch.hpp  simple.frag  simple.vert  window.cpp  window.hpp
modules/: module_build_steps.txt
