SET(GTB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/application.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/window.cpp
)
ADD_EXECUTABLE(gtb ${GTB_SOURCES})
TARGET_LINK_LIBRARIES(gtb glfw)
TARGET_LINK_LIBRARIES(gtb -Wl,-subsystem,windows)
TARGET_INCLUDE_DIRECTORIES(gtb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)

ADD_CUSTOM_COMMAND(TARGET gtb POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${GLFW_BINARY_DIR}/src/glfw3.dll"
        "${CMAKE_CURRENT_BINARY_DIR}/glfw3.dll")
